# fontpreview

./: .gitignore  pyproject.toml  setup.py  test_fp.py
docs/source/: conf.py
fontpreview/: __init__.py  fontbanner.py  fontpage.py  fontpreview.py
